--- a/Resume-Builder-MERN/client/package.json
+++ b/Resume-Builder-MERN/client/package.json
@@ -33,6 +33,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
@@ -53,10 +54,13 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.2.0"
   }
 }
